# CPP-Backtest

./: .gitignore  CMakeLists.txt  README.md
data/: test_data.csv
include/: BacktestEngine.hpp  DataLoader.hpp  MeanReversionStrategy.hpp  MovingAverageCrossoverStrategy.hpp  Portfolio.hpp  SimpleStrategy.hpp  Strategy.hpp  Trade.hpp
src/: BacktestEngine.cpp  DataLoader.cpp  MeanReversionStrategy.cpp  MovingAverageCrossoverStrategy.cpp  Portfolio.cpp  Trade.cpp  main.cpp
tests/: AllTests.cpp  BacktestEngine.cpp  DataLoaderTest.cpp  PortfolioTest.cpp  SimpleStrategyTest.cpp  TradeTest.cpp
